# ChangeLog for media-gfx/fontforge
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.80 2008/05/06 04:19:37 vapier Exp $

*fontforge-20080429 (06 May 2008)

  06 May 2008; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20080429.ebuild:
  Version bump.

*fontforge-20080330 (31 Mar 2008)

  31 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20080330.ebuild:
  Version bump.

*fontforge-20080309 (13 Mar 2008)

  13 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20080309.ebuild:
  Version bump.

  13 Mar 2008; Ryan Hill <dirtyepic@gentoo.org>
  +files/fontforge-20080302-bad-apple.patch, fontforge-20080302.ebuild:
  Add patch from upstream and Ed Catmur to fix segfault when generating fonts
  containing a symbol cmap. Bug #212715.

*fontforge-20080302 (08 Mar 2008)

  08 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20080302.ebuild:
  Version bump.

  11 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  fontforge-20071210.ebuild:
  amd64 stable wrt bug #205145

  05 Feb 2008; Mike Frysinger <vapier@gentoo.org> fontforge-20071210.ebuild,
  fontforge-20080109.ebuild, fontforge-20080203.ebuild:
  Fix building with USE=-X #205455 by Luu Danh Hieu.

*fontforge-20080203 (04 Feb 2008)

  04 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20080203.ebuild:
  Version bump.

  10 Jan 2008; Jeroen Roovers <jer@gentoo.org> fontforge-20071210.ebuild:
  Stable for HPPA (bug #205145).

  10 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  fontforge-20070312.ebuild, fontforge-20070501.ebuild,
  fontforge-20070607.ebuild, fontforge-20070723.ebuild,
  fontforge-20070808.ebuild, fontforge-20070831.ebuild,
  fontforge-20070915.ebuild, fontforge-20071002.ebuild,
  fontforge-20071110.ebuild, fontforge-20071210.ebuild,
  fontforge-20080109.ebuild:
  Dropped ppc-macos keyword, see you in prefix
