@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/fontforge/${PN}_full-${PV}.tar.bz2
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos"
 IUSE="gif jpeg nls png python tiff truetype svg unicode X"
 
 RDEPEND="gif? ( >=media-libs/giflib-4.1.0-r1 )
